fix layout issues; show lyrics custom page on /tags/lyrics and /lyrics

--- a/static/style.css
+++ b/static/style.css
@@ -66,7 +66,7 @@ ul.song-list{
 
 .overflow-x{
 	text-wrap: none;
-	width: 1000px !important;
+	width: auto !important;
 }
 
 ol > h3 {
